- Changes for service installer to rename the service in the implementation project for easier way to install multiple instances on one machine. - WebService bugfix when using GenericConfigurator switching from Demo to Production was impossible due to hard reference to demo in wsdl. - Minor changes for more parameterized requests to the cloud

--- a/NET_FWK_MovilizerWindowsService.csproj
+++ b/NET_FWK_MovilizerWindowsService.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Compile Include="Helper\AssignmentBoardHelper.cs" />
     <Compile Include="Helper\FileHelper.cs" />
+    <Compile Include="Log\FileLog.cs" />
     <Compile Include="Templates\ParticipantConfigurationTemplate.cs" />
     <Compile Include="WindowsService\Configurators\GenericConfigurator.cs" />
     <Compile Include="WindowsService\Configurators\AppConfigConfigurator.cs" />
